--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -32,16 +32,11 @@
                     <div id = "index_right" class="col-md-6 text-center right">
                         <div class="logo">
                             <!-- <img src="assets/images/logo.png"> -->
-							<h1>Wijsjes van Weleer</h1>
+							<h2>Wijsjes van Weleer</h2>
                             <h4>Quintus van Amstel</h4>
                         </div>
                         <p class="home-description">
-							Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar.
-Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.
-
-<!-- Hij zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. -->
-
-                        </p>
+							Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.</p>
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">Quintus</div>
                             <div id="work" class="btn btn-rabbit">Live Zingen</div>
@@ -102,8 +97,9 @@ Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.
                         </div>
                         <p class='subtitle'>Wijsjes van Weleer
                         </p>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <p class="info">Quintus zingt liedjes van o.a. Eddy Christiani, Wim Sonneveld, Willy Derby en Cliff Richard. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen. Door passende grapjes, swingende danspasjes, en mooie anekdotes neemt hij ouderen met en zonder dementie terug naar die mooie en o zo herkenbare tijd.</p>
-						<p> :::: That video you have on your facebook :::: </p>
+
 						</div>
                 </div>
             </div>
