--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -97,7 +97,7 @@
                         </div>
                         <p class='subtitle'>Wijsjes van Weleer
                         </p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="500" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <p class="info">Quintus zingt liedjes van o.a. Eddy Christiani, Wim Sonneveld, Willy Derby en Cliff Richard. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen. Door passende grapjes, swingende danspasjes, en mooie anekdotes neemt hij ouderen met en zonder dementie terug naar die mooie en o zo herkenbare tijd.</p>
 
 						</div>
