--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -67,10 +67,10 @@
                             <h2 class="page-title" text-center>Quintus van Amstel</h2>
                             <div class="marker">a</div>
                         </div>
-                        <p class='subtitle'>Een zangeres die de wijsjes van weleer brengt
+                        <p class='subtitle'>Een zanger die wijsjes van weleer brengt
                         </p>
                         <p class="info">Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. Hij zingt liedjes van o.a. Eddy Christiani, Wim Sonneveld, Willy Derby en Cliff Richard. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen. Door passende swingende danspasjes, en mooie anekdotes neemt hij ouderen met en zonder dementie terug naar die mooie en o zo herkenbare tijd.</p>
-						<p> Meer over Quintus als goochelaar: <a href="https://www.depaarsegoochelaar.nl/">De Paarse Goochelaar</a></p>
+						<p> Naast optredens als zanger geeft Quintus ook magische voorstellingen als: <a href="https://www.depaarsegoochelaar.nl/">De Paarse Goochelaar</a></p>
 						</div>
                 </div>
             </div>
@@ -97,7 +97,7 @@
                         </div>
                         <p class='subtitle'>Wijsjes van Weleer
                         </p>
-<iframe width="500" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="500"  height="300" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <p class="info">Quintus zingt liedjes van o.a. Eddy Christiani, Wim Sonneveld, Willy Derby en Cliff Richard. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen. Door passende grapjes, swingende danspasjes, en mooie anekdotes neemt hij ouderen met en zonder dementie terug naar die mooie en o zo herkenbare tijd.</p>
 
 						</div>
