--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -37,9 +37,14 @@
                         </div>
                         <p class="home-description">
 							Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.</p>
+
+							<p class="home-description">
+								<a href="{% static 'file/price.pdf' %}">Tarievenlijst</a> </p>
+
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">Quintus</div>
-                            <div id="work" class="btn btn-rabbit">Live Zingen</div>
+							<div id="work" class="btn btn-rabbit">Live Zingen</div>
+                            <!-- <div id="price" class="btn btn-rabbit">Tarievenlijst</div> -->
                             <div id="contact" class="btn btn-rabbit">Contact</div>
                         </div>
                         <!-- <div class="social">
