updating website with feedback and remove price list

--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -39,7 +39,7 @@
 							Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.</p>
 
 							<p class="home-description">
-								<a href="{% static 'file/price.pdf' %}">Tarievenlijst</a> </p>
+								<!-- <a href="{% static 'file/price.pdf' %}">Tarievenlijst</a> </p> -->
 
                         <div class="btn-group-vertical custom_btn animated slideinright">
                             <div id="about" class="btn btn-rabbit">Quintus</div>
@@ -88,9 +88,9 @@
                 <div class="row">
                     <div class="col-md-6" id="work_left">
                         <div id="owl-demo" class="owl-carousel owl-theme">
-                            <div class="item"><img class="img-responsive img-rabbit" src="{% static 'assets/images/work.jpg' %}"></div>
+                            <!-- <div class="item"><img class="img-responsive img-rabbit" src="{% static 'assets/images/work.jpg' %}"></div> -->
                             <div class="item"><img class="img-responsive img-rabbit" src="{% static 'assets/images/home.jpg' %}"></div>
-                            <div class="item"><img class="img-responsive img-rabbit" src="{% static 'assets/images/contact.jpg' %}"></div>
+                            <!-- <div class="item"><img class="img-responsive img-rabbit" src="{% static 'assets/images/contact.jpg' %}"></div> -->
                         </div>
                     </div>
 
@@ -104,6 +104,110 @@
                         </p>
 <iframe width="500"  height="300" src="https://www.youtube.com/embed/k9Vgq4VJ1G8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         <p class="info">Quintus zingt liedjes van o.a. Eddy Christiani, Wim Sonneveld, Willy Derby en Cliff Richard. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen. Door passende grapjes, swingende danspasjes, en mooie anekdotes neemt hij ouderen met en zonder dementie terug naar die mooie en o zo herkenbare tijd.</p>
+
+                        <div class="FixedHeightContainer">
+                          <h2>Reacties</h2>
+                          <div class="Content">
+
+<p>
+De bewoners en de vrijwilligers hebben heel erg genoten van jouw optredens. We kregen van iedereen complimenten, het was harstikke geschikt en leuk voor de bewoners.
+De sfeer en het geluid was ook perfect.
+Wij vonden het ook erg leuk dat je zo goed met de bewoners omging, en vooral iedereen in de zaal er bij betrok.
+Graag nodigen wij je nog een keer uit we zullen hiervoor contact met je opnemen.</p>
+
+<p>Quintus is een paar keer tot grote tevredenheid van onze bewoners te gast geweest om ons muzikaal te verwennen.</p>
+Bewoners waren beide keren erg tevreden. Wij gaan Quintus zeker nog een keer vragen! De communicatie met Quintus verloopt altijd soepel, hij reageert altijd erg snel op mailtjes.</p>
+
+<p>Zeer professioneel optreden en een erg sympathieke zanger die met zijn verhalende en swingende acts ons heeft geboeid en verrast. Quintus heeft onze middag voor de bewoners tot een groot succes gemaakt.</p>
+
+<p>100% aanrader, je weet niet altijd wie je uitnodigt en over de vloer krijgt maar Quintus is professioneel en ver boven verwachting. top!</p>
+
+<p>Quintus is meer dan een zanger, hij is echt een entertainer. Hij zingt niet alleen leuke liedjes, maar weet ook een heel plezierige sfeer te scheppen. Hij praat gemakkelijk en vindt precies de juiste toon. Quintus krijgt zelfs de minder actieve bewoners aan het dansen.</p>
+
+<p>Passie, inlevingsvermogen en interactie. Quintus is een gedreven geduldige zanger en komiek, die wij zeker weer terug gaan vragen in ons zorgcentrum!</p>
+
+<p>Hartelijk dank voor je mooie optredens voor onze bewoners tijdens de gezamenlijke middagen in ons zorgcentrum. Onze mensen (ouderen) hebben erg genoten van je spel en vriendelijke en geestige benadering. Heel prettig dat je inspeelde op de doelgroep door tempo en inhoud aan te passen. Ook het maken van de afspraken is ons goed bevallen, in overleg was er veel mogelijk en alles verliep helemaal volgens plan! Nogmaals heel erg bedankt en graag tot een volgende keer!</p>
+
+<p>Quintus is een sympathiek en rustig persoon. Hij weet goed in te spelen op de belevingswereld van de bewoners. Zijn wijsjes van weleer zijn zeker aan te bevelen.</p>
+
+<p>Quintus is als zanger een aanrader en als mens een verademing.</p>
+
+<p>Quintus heeft naast zangkwaliteiten ook veel andere kwaliteiten en weet heel goed hoe hij met ouderen met dementie om moet gaan.
+Tenslotte: wat ik heel erg waardeerde is het feit dat Quintus al vroeg aanwezig was om sfeer te proeven en om bewoners al even te spreken met een achtergrondmuziekje.
+Ook aan het eind van de voorstelling nam hij alle tijd om nog een praatje met de mensen te maken, hij had onmiddelijk vele fans. Bedankt Quintus, het was geweldig!!!</p>
+
+<p>Het was een super leuk optreden! Lekker weer, daarom buiten, achter in de tuin. De gezichten van de bewoners lieten zien hoe leuk ze het vonden! Veel interactie tussen Quintus en de ouderen. Erg leuk. Zeker een aanrader!</p>
+
+<p>Quintus is een sympathieke artiest. Hij maakt een professionele indruk, en komt al zijn afspraken na. Het contact liep goed en de reacties op zijn optreden waren positief!</p>
+
+<p>Iedereen kijkt met aandacht naar Quintus die niet alleen zingt maar ook dansjes doet. Dan vertelt hij een serieus verhaal om ons vervolgens humorvol bij de neus te nemen! Het was ons een groot genoegen om je te hebben uitgenodigd. Je verstaat als geen ander de kunst om direct en heel persoonlijk contact met je publiek te leggen.</p>
+
+<p>Quintus is een aanrader voor iedereen die een iets geweldigs zoekt voor ouderen.Wij hebben erg veel positieve reacties gehad naar aanleiding van zijn aanwezigheid.</p>
+
+<p>Vanmorgen mail gestuurd, en dezelfde ochtend had ik al een reactie. Heeft een paar hele leuke liedjes en acts waarbij de ouderen aan z'n lippen hangen.</p>
+
+<p>Komt goed z'n afspraken na, is op tijd, wat ook niet onbelangrijk is</p>
+
+<p>Quintus heeft bij ons een zeer goede indruk achter gelaten. Hij is erg goed met senioren.</p>
+
+<p>Vriendelijke zanger, stipt op tijd, komt afspraken na, leuk optreden voor zowel bewoners als medewerkers, goede interactie met het publiek. Absoluut het hoogtepunt van een geslaagde dag!</p>
+
+<p>Als je bij zo'n optreden je ogen sluit, dan hoor je bijna de stem van het polygoonjournaal. Het is mooi om te ervaren dat Quintus de sfeer van vroeger lijkt te ademen. Het is een beetje alsof we Wim Sonneveld over de vloer hebben.</p>
+
+<p>Ik wil je nogmaals bedanken voor je optreden bij ons gister. Iedereen was erg enthousiast, ik heb nog veel reacties gekregen na afloop.</p>
+
+<p>Wat me vooral opviel was de humor, de betrokkenheid. Spelenderwijs de ouderen boeien en meenemen naar de tijd van vroeger. Laagdrempelig, creatief en improviserend met voldoende glimlachende gezichten.</p>
+
+<p>Het optreden is gisteren heel erg goed bevallen. Alles was in orde: van het moment dat Quintus kwam, tot de humor die paste bij het soort mensen in ons zorgcentrum. En ook de flexibiliteit tijdens het optreden was top. Iedereen vond het erg verrassend en gezellig.</p>
+
+<p>Het was een geweldige voorstelling, Quintus. Verbluffend om te zien hoe je onze bewoners met dementie uitstekend hebt weten te bereiken. Ze hebben door jou goede aanpak collectief besloten je te omarmen. Mijn complimenten!</p>
+
+<p>Een buitengewoon plezierige kennismaking met een bevlogen zanger. Het optreden van Quintus was ongedwongen. Zijn presentatie werd alom geprezen en zijn verhalen en grapjes zorgden bij zowel de bewoners als medewerkers voor vermakelijke discussies.</p>
+
+<p>Het optreden van Quintus heeft bijgedragen aan een onvergetelijke middag, behalve voor de ouderen die vergeetachtig zijn natuurlijk. :) Een reden te meer om hem nog eens uit te nodigen. Een aanrader dus.</p>
+
+<p>Superleuk optreden, mooie zang  toegankelijke en onderhoudende praatjes tussendoor. Iedereen was betrokken, geïnteresseerd, verrast en vermaakt. Humor, vaart, persoonlijke aandacht: aanrader.</p>
+
+<p>Steengoed en met de nodige humor! Zeker voor herhaling vatbaar. De perfecte vorm van entertainment voor ouderen!</p>
+
+<p>Allereerst verliep de communicatie met Quintus helder en waren de afspraken en voorwaarden snel duidelijk.
+Bij het optreden zelf was de voorstelling goed afgestemd op de belevingswereld van de ouderen. Ze hebben geluisterd en ze hebben gelachen. Kortom we waren zeer tevreden en blij met onze keuze voor Quintus!</p>
+
+<p>Ontzettend leuk optreden, aangepast aan het publiek, met sympathieke en soms gedurfde interactie met de ouderen. Herkenbare en bijzondere liedjes. Zeer geslaagd.</p>
+
+<p>Het was mooi om te zien dat iedereen plezier had en dat veel bewoners meezongen, ook van wie we het niet gewend zijn.</p>
+
+<p>Het was een supergezellige dag voor jong (65)tot oud(99). Waarbij Quintus zeer flexibel was met het invullen van de dag!! Nogmaals bedankt voor de mooie wijsjes van weleer!!</p>
+
+<p>Geweldige show. Was bedoeld als entertainment voor de bewoners maar het was zo leuk dat wij, de medewerkers enorm hebben genoten. Bedankt voor je bijdrage aan een geslaagde middag.</p>
+
+<p>Alles was heel erg goed voorbereid op een professionele manier. Quintus is heel charismatisch en de senioren waren helemaal onder zijn indruk (en vonden het heel erg gezellig dat hij taart met hen bleef te eten!)</p>
+
+<p>Super leuk optreden van Quintus in ons zorgcentrum. Hij beweegt zich makkelijk tussen de ouderen en weet hen prima te entertainen. Ik heb alleen maar enthousiaste reacties ontvangen op het optreden. Zeker een aanrader!</p>
+
+<p>Geweldige show! Geweldige entertainer! Genoten van een super leuke avond. Het is een beetje alsof we een conference van Wim Sonneveld hebben meegemaakt! Bedankt!</p>
+
+<p>De bewoners van ons zorgcentrum hebben jou in hun hart gesloten! Je humor, souplesse, en aandacht maken jou een ras artiest.</p>
+
+<p>Quintus weet het publiek goed te vermaken met zijn liedjes die hij goed aan elkaar praat...top artiest!</p>
+
+<p>Quintus is een zeer bedreven artiest die enorm interactief is waardoor de show echt een belevenis is.</p>
+
+<p>Voor onze bewoners met dementie kwam Quintus op locatie met een spetterend optreden . Hij weet de toeschouwers te boeien, heeft humor, speelt in op wat er gaande is in het publiek en integreerde het thema 'Verbinding' van onze dag in zijn optreden.</p>
+
+<p>Quintus is aardig, flexibel, professioneel, luistert goed naar je wensen, laat je vol verbazing geloven dat je terug bent naar de tijd van welleer. Hij weet mensen met en zonder dementie te boeien.</p>
+
+<p>Quintus, nogmaals hartelijk dank voor je geweldige optreden, ook namens alle bewoners. Ik zal je dan ook van harte aanbevelen als mensen op zoek zijn naar een mooi optreden voor ouderen.</p>
+
+<p>Wat een heerlijk en afwisselend optreden heb je verzorgd.</p>
+
+<p>Quintus, nogmaals harstikke bedankt dat je met je sprankelende performance afgelopen week onze vrijwilligersmiddag wilde opleuken. De vrijwilligers en bewoners hebben erg genoten van je professionele optreden.</p>
+
+<p>Niet alleen zijn liedjes en grapjes zijn leuk, maar ook is je interactie met de toeschouwers super. Je voelt de sfeer fantastisch aan en speelt daar geweldig op in. Ik ga je aanbevelen!</p>
+
+
+                          </div>
+                        </div>
 
 						</div>
                 </div>
@@ -144,7 +248,7 @@
 						<p> Telefoon: 06 - 4474 9595</p>
 						<p> Email: <a href="mailto:quintus@depaarsegoochelaar.nl"> quintus@depaarsegoochelaar.nl</a></p>
 							<p> Website: <a href="www.depaarsegoochelaar.nl"> www.depaarsegoochelaar.nl</a></p>
-						<p> Website in English: <a href="mailto:quintus@depaarsegoochelaar.nl"> www.thepurplemagician.com</a></p>
+						<p> Website in English: <a href="www.thepurplemagician.com"> www.thepurplemagician.com</a></p>
                     </div>
                 </div>
             </div>
@@ -160,6 +264,8 @@
             </footer>
 
         </div>                                                              <!-- Contact ends here -->
+
+
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
         <script src="{% static 'assets/js/bootstrap.min.js' %}"></script>
