--- a/homepage/static/assets/css/main.css
+++ b/homepage/static/assets/css/main.css
@@ -58,11 +58,11 @@ body{
 		    padding-top: 15px;
 		    padding-right: 50px;
 		}
-		
+
 		.home-description{
 			padding-right: 90px;
 			padding-left: 90px;
-			
+
 		}
 }
 .img-rabbit{
@@ -88,7 +88,7 @@ body{
 p{
 	color: #585757;
 	font-size: 16px;
-	
+
 }
 
 .page-title{
@@ -115,7 +115,7 @@ footer{
 
 
 .back{
-    width: 170px;    
+    width: 170px;
     font-family: "Crimson";
     font-size: 17px;
     font-style: italic;
@@ -123,7 +123,7 @@ footer{
     text-align: center;
     display: block;
     clear: both;
-    margin-top: 70px;	 
+    margin-top: 70px;
 }
 
 .back i{
@@ -146,7 +146,7 @@ footer{
 }
 
 .btn-group-vertical{
-    font-family: "Josefin Sans";    
+    font-family: "Josefin Sans";
 }
 
 .about{
@@ -154,7 +154,7 @@ footer{
 	/*margin-top: 35px;*/
 	/*margin-bottom: 25px;*/
 	font-size: 32px;
-	
+
 }
 .form-control{
 	font-style: italic;
@@ -164,7 +164,7 @@ footer{
 }
 
 .page-title{
-	
+
 	font-size: 32px;
 	font-family: "Josefin Sans";
 }
@@ -244,7 +244,7 @@ footer{
 }
 
 .item{
-	
+
 	background-color: #313131;
 	color: #f9f9f9;
 }
@@ -284,13 +284,13 @@ footer{
 	font-size: 21px;
 	padding: 15px 20px;
 	margin: 0px;
-	background-color: #fff; 
+	background-color: #fff;
 
 }
 
 .owl-theme .owl-controls .owl-nav [class*=owl-] i{
 	color: #333;
-	
+
 }
 
 .owl-theme .owl-controls .owl-nav [class*=owl-]:hover{
@@ -312,4 +312,22 @@ footer{
 }
 .show{
 	display: block;
+}
+
+.FixedHeightContainer {
+    float:right;
+    height: 60px;
+    /* width:250px; */
+    padding:10px;
+    background:#bb9e7d;
+		padding-top: 2px; padding-bottom: 5px;
+}
+
+.Content {
+    height:150px;
+		padding:10px;
+		box-shadow: 0px 5px 8px -2px rgba(0,0,0,0.3) inset;
+    overflow:auto;
+    background:#fff;
+
 }
