--- a/homepage/templates/homepage/index.html
+++ b/homepage/templates/homepage/index.html
@@ -39,6 +39,8 @@
 							Quintus zingt live in een originele jaren twintig microfoon en de liefde voor de liedjes van vroeger is duidelijk voelbaar. Met zowel tederheid als uitbundigheid weet hij de senioren voor zich te winnen.</p>
 
 							<p class="home-description">
+
+                <a href="https://indebuurt.nl/tilburg/tilburgers/tilburger-van-de-week/quintus-helpt-demente-tilburgers-ineens-dansen-ze-door-de-kamer~167765/?utm_source=facebook&utm_medium=facebooktijdlijnpost&fbclid=IwAR2HlTssOh3rY8-vmMq8JSt6i64DfpSa-O19aQtpg2O-CBR054VEglv6oHM">Nieuws</a>
 								<!-- <a href="{% static 'file/price.pdf' %}">Tarievenlijst</a> </p> -->
 
                         <div class="btn-group-vertical custom_btn animated slideinright">
